hphp/hack/test/typecheck/async_block3.php
<?hh

async function f(): Awaitable<string> {
  $x = () ==> async {
    return 'foo';
  };
  return await $x();
}
